_includes/manuals/1.8/3.5.2_configuration_options.md

Configuration is broken into two parts. The */etc/foreman/settings.yaml* file and the *Administer > Settings* page. The configuration file contains a few low-level options that need to be set before Foreman starts but the majority of Foreman customization is managed from within the web interface on the *Settings* page.

The configuration file can also override those settings specified in the web interface.  Any settings added in the config file that are available in the web interface will be made read-only.

#### The config/settings.yaml file

##### YAML start

The first non-comment line of this file must be three dashes.

<pre>
---
</pre>

##### login

This boolean option configures whether Foreman requires users to to login. If it is set then each user will be expected to authenticate themselves and all operations will occur, and be audited, under their identity. When this option is _false_ then all activity will be executed under the admin account.

<pre>
:login: true
</pre>

##### require_ssl

This boolean option configures whether Foreman insists on using only https/ssl encrypted communication channels in the web interface. This does not configure the channels used to contact the smart-proxies. Note that certain operations will still accept a http connection even if this is set, for example, the downloading of a finish script.

<pre>
:require_ssl: true
</pre>

##### unattended

This boolean option configures whether Foreman will act as a simple node classifier for puppet, or support the full spectrum of operations required for managing a host's lifecycle. When set to _true_ then foreman will provide full host building facilities for various operating systems.
<pre>
:unattended: true
</pre>

##### support_jsonp

This boolean options configures whether Foreman will provide support for the JavaScript object notation with padding. When set to _true_ then Foreman will allow to pass a callback parameter to the API calls.

<pre>
:support_jsonp: false
</pre>

#### The 'config/email.yaml' file

An example settings file can be found at **config/email.yaml.example**, copy this file to **config/email.yaml**

##### Configuration Directives

###### authentication
The type of authentication method expected by your service provider.

Valid settings:
<pre>
:login
:none
</pre>

*(note: if you set this to :none, you must not include the user_name and password settings)*

###### delivery_method
The mail transport method to be used.

Valid settings:
<pre>
:smtp
:sendmail
</pre>

##### Example email.yml Configurations

###### Simple Login Authentication (default settings)
<pre>
production:
  delivery_method: :smtp
  smtp_settings:
    address: smtp.example.net
    port: 25
    domain: example.net
    authentication: :login
    user_name: foreman@example.net
    password: foreman
</pre>
    
###### No Authentication
Example for an SMTP service provider with no authentication. Note the colon before none.

<pre>
production:
  delivery_method: :smtp
  smtp_settings:
    address: smtp.nowhere.net
    port: 25
    domain: nowhere.com
    authentication: :none
</pre>

###### Using sendmail command
Example for a unix system that uses the /usr/sbin/sendmail command.
<pre>
production:
  delivery_method: :sendmail
</pre>

#### The 'Administer/Settings' page

##### administrator

When Foreman needs to mail the administrator then this is the email address that it will contact.  The domain is determined from Facter, else it will default to the ":domain" setting in /etc/foreman/settings.yaml.
Default: root@&lt;your domain&gt;.

##### authorize_login_delegation

mod_proxy and other load balancers will set a REMOTE_USER environment variable. If this is _true_ , your users will be able to login through an external service and Foreman requests will be authenticated using this REMOTE_USER variable.
Default: false

##### authorize_login_delegation_api

Same as above, but this setting allows REMOTE_USER authentication for API calls as well.
Default: false

##### authorize_login_delegation_auth_source_autocreate

If you have authorize_login_delegation set, new users can be autocreated through your external authentication mechanism by changing this to the name of the Auth Source you want to use to auto create users.
Default: ''

##### create_new_host_when_facts_are_uploaded

When facts are received from Puppet or other configuration management systems, a corresponding host will be created in Foreman if the certname or hostname is unknown.  When false, this behavior is disabled and facts will be discarded from unknown hosts.
Default: true
See also: create_new_host_when_report_is_uploaded

##### create_new_host_when_report_is_uploaded

If a report is received from Puppet or other configuration management systems, a corresponding host will be created in Foreman if the hostname is unknown.  When false, this behavior is disabled and reports will be discarded from unknown hosts.
Default: true
See also: create_new_host_when_facts_are_uploaded

##### default_location

The name of an location that hosts uploading facts into Foreman will be assigned to if they are new or missing an location.  This can be used when hosts are created through fact uploads to ensure they're assigned to the correct location to prevent resource mismatches.  For inherited location, the fact should use slash-delimited names, e.g. "USA/New York".
Default: ''

##### default_organization

The name of an organization that hosts uploading facts into Foreman will be assigned to if they are new or missing an organization.  This can be used when hosts are created through fact uploads to ensure they're assigned to the correct organization to prevent resource mismatches.  For inherited organization, the fact should use slash-delimited names, e.g. "ACME Inc/Engineering".
Default: ''

##### default_puppet_environment

When Foreman receives a fact upload from a machine that it has not previously come across it will create a host in its database. If the facts from that host did not contain information about the puppet environment then it will assign the _default_puppet_environment_ environment to this host.
Default: production

##### Default_variables_Lookup_Path

A Smart-variable's match criteria are evaluated in a specific order and if this search order is not provided then _Default_variables_Lookup_Path_ is used.
Default: ["fqdn", "hostgroup", "os", "domain"]

##### document_root

Puppetdoc will create RDoc documents for your manifests if its available. This setting allows you to select the directory where you want these documents to be created.
Default: foreman_root/public/puppet/rdoc

##### email_reply_address

The return address applied to outgoing emails.
Default: Foreman-noreply@&lt;your domain&gt;

##### email_subject_prefix

The subject line prefix for any emails sent by Foreman.
Default: [foreman]

##### enc_environment

When this is _true_, Foreman will send the puppet environment in the ENC yaml output. This is meant to fix conflicts between a node's puppet.conf environment and the environment set in Foreman. On Puppet 3+, agents will take the environment sent by the ENC. When _false_, the ENC yaml will not contain the environment, the node will not update its environment and use the one at puppet.conf.
Default: true

##### Enable_Smart_Variables_in_ENC

Whether Smart-variables should be included in the yaml node information provided to puppet.
Default: true

##### entries_per_page

The number of entries that will be shown in the web interface for list operations.
Default: 20

##### foreman_url

Emails may contain embedded references to Foreman's web interface. This option allows the URL prefix to be configured.  The FQDN is determined from Facter, else it will default to the ":fqdn" setting in /etc/foreman/settings.yaml.
Default: https://FQDN/ or http://FQDN/ (depending on require_ssl)
See also: unattended_url

##### host_group_matchers_inheritance

Matchers used in smart variables or class parameters to match host groups can be inherited by children of those matching host groups too (e.g. a matcher for hostgroup=Base will also apply to Base/Web). Set this to false to make matchers only match a particular hostgroup and not its children.
Default: true

##### idle_timeout

Users that stay idle (no requests sent to Foreman) for more than this number of minutes will be logged out.
Default: 60

##### interpolate_erb_in_parameters

If _true_, Foreman variables will be exposed to the ENC. Check [Template Writing](http://projects.theforeman.org/projects/foreman/wiki/TemplateWriting) for a more comprehensive guide on how to create and use these variables in your ERB templates.
Default: true

##### ignore_puppet_facts_for_provisioning

If this option is set to _true_ then Foreman will not update the IP and MAC addresses stored on a host's network interfaces with the values that it receives from facts. It will also include Foreman's values for IP and MAC to Puppet in its node/ENC information.
Default: false

##### legacy_puppet_hostname

This setting truncates the hostname of your smart proxy to 'puppet' if it starts with 'puppet'.
Default: false

##### libvirt_default_console_access

The IP address that should be used for the console listen address when provisioning new virtual machines via Libvirt.
Default: 0.0.0.0

##### location_fact

The name of a fact from hosts reporting into Foreman which gives the full location name of the host.  This can be used when hosts are created through fact uploads to ensure they're assigned to the correct location to prevent resource mismatches.  The location of a host will be updated to the value of the fact on every fact upload.  For inherited locations, the fact should use slash-delimited names, e.g. "USA/New York".
Default: foreman_location

##### login_delegation_logout_url

If your external authentication system has a logout URL, redirect your users to it here. This setting can be useful if your users sign in Foreman through SSO, and you want them to sign out from all services when they log out Foreman.
Default: ''

##### manage_puppetca

If this option is set to _true_ then Foreman will manage a host's Puppet certificate signing. If it is set to _false_ then some external mechanism is required to ensure that the host's certificate request is signed.
Default: true

##### max_trend

Days that trend graphs will capture.
Default: 30

##### modulepath

This it the modulepath that foreman uses when processing puppet modules. It is usually able to determine this itself at runtime but if it is not able to find a value then _modulepath_ is used.
Default: /etc/puppet/modules

##### oauth_active

Enables OAuth authentication for API requests.
Default: false

##### oauth_consumer_key

OAuth consumer key
Default: none

##### oauth_consumer_secret

OAuth consumer secret
Default: none

##### oauth_map_users

This allows OAuth users to specify which user their requests map to. When this is _false_, OAuth requests will map to admin.
Default: true

##### organization_fact

The name of a fact from hosts reporting into Foreman which gives the full organization name of the host.  This can be used when hosts are created through fact uploads to ensure they're assigned to the correct organization to prevent resource mismatches.  The organization of a host will be updated to the value of the fact on every fact upload.  For inherited organization, the fact should use slash-delimited names, e.g. "ACME Inc/Engineering".
Default: foreman_organization

##### Parametrized_Classes_in_ENC

In Puppet 2.6.5+, the ENC may send a hash of the class's attributes and values. Before then, the ENC used to send just an array of class names. Set this to _true_ if you are using any version of Puppet equal to or higher than 2.6.5.
Default: true

##### password_hash

Changes the algorithm and format used to hash root passwords entered when creating new hosts or host groups.  This needs to be set to the lowest common denominator of operating systems that are provisioned from Foreman, but try to set it to the highest level (i.e. SHA-512) that all OSes support.  After changing the value, root passwords will need to be re-entered on existing hosts or host groups in order to re-hash them under the new algorithm.
Default: MD5

##### proxy_request_timeout

Timeout in seconds used when making REST requests to a Smart Proxy, e.g. when importing Puppet classes or creating DHCP records.  May be set to a larger value when certain operations take a long time.
Default: 60

##### puppet_interval

This is the number of minutes between each run of puppet.
Default: 30

##### puppet_server

The default puppet server hostname. For larger organizations this is often a non fqdn so that a name like _puppet_ can be a different host within each DNS domain.
Default: puppet

##### puppetrun

If this option is set to _true_ then Foreman will be able to trigger a puppet run on any host that it manages.
Default: false

##### query_local_nameservers

If _true_, Foreman will query the local DNS. When _false_ Foreman will query the SOA/NS authority. Warning! Querying a resolver can cause Foreman to get false positives when checking presence of DNS records due to caching.
Default: false

##### remote_addr

If Foreman is running behind Passenger or a remote load balancer, the IP of this load balance should be set here. This is a regular expression, so it can support several load balancers, i.e: (10.0.0.1|127.0.0.1)
Default: 127.0.0.1

##### require_ssl_smart_proxies

When set to _true_, Foreman requires a client SSL certificate on requests from smart proxies or services on them (e.g. Puppet masters), and will verify the CN of the certificate against the known smart proxies. If false, it uses the reverse DNS of the IP address making the request. require_ssl in ```config/settings.yaml``` should be enabled too. For more information about securing the connection between Puppet masters or smart proxies and Foreman, see [Section 5.4.1](manuals/{{page.version}}/index.html#5.4.1SecuringPuppetMasterRequests)
Default: true

##### restrict_registered_smart_proxies

When set to _true_, services such as Puppet masters (or Salt, Chef) need to have a smart proxy registered with the appropriate feature (e.g. Puppet) to access fact/report importers and ENC output.
Default: true

##### root_pass

If a root password is not provided whilst configuring a host or its host group then this encrypted password is used when building the host.
Default: ''
(To generate a new one you should use: *openssl passwd -1 "your_password"* )


##### safemode_render

The default templating system used within Foreman allows unlimited interpolated variables and expressions. This could obviously be abused so a evaluation environment is provided that restricts the template variables and expressions to a whitelist. When this option is _true_ then only known helper methods and instance variables will be available in template expansion.
Default: true

##### send_welcome_email

New account holders will receive a welcome email when the account is created if this is enabled, including their username and a link to Foreman.
Default: false

##### ssl_client_dn_env

Environment variable containing the subject DN from a client SSL certificate
Default: SSL_CLIENT_S_DN

##### ssl_client_verify_env

Environment variable containing the verification status of a client SSL certificate
Default: SSL_CLIENT_VERIFY

##### ssl_ca_file

The SSL Certificate Authority file that Foreman will use when connecting to its smart-proxies.
Default: The CA file used by puppet

##### ssl_certificate

The SSL certificate that Foreman will use when connecting to its smart-proxies.
Default: The host certificate used by puppet

##### ssl_priv_key

The SSL private key file that Foreman will use when connecting to its smart-proxies.
Default: The private key file used by puppet

##### token_duration

Time in minutes installation tokens should be valid for, 0 to disable.
Default: 360 (6 hours)

##### trusted_puppetmaster_hosts

Other trusted puppet masters in addition to Smart Proxies to access fact/report importers and ENC output. i.e: [puppetmaster1.yourdomain.com, puppetmaster2.yourdomain.com]
Default: []

##### unattended_url

This controls the URL prefix used in provisioning templates such as TFTP/PXELinux files that refer to the Foreman server.  It is usually HTTP rather than HTTPS due to lack of installer support for HTTPS.  The FQDN is determined from Facter, else it will default to the ":fqdn" setting in /etc/foreman/settings.yaml.
Default: http://FQDN/
See also: foreman_url

##### update_environment_from_facts

If Foreman receives an environment fact from one of its hosts and if this option is _true_, it will update the host's environment with the new value. By default this is not the case as Foreman should manage the host's environment.
Default: false

##### update_ip_from_built_request

If _true_, Foreman will update the host IP with the IP that made the 'build' request. This request is made at the end of a provisioning cycle to indicate a host has completed the build.
Default: false

##### use_shortname_for_vms

When false, any hosts created on a compute resource will use the FQDN of the host for the name of the virtual machine.  When set to the true, the short name (i.e. without domain) will be used instead.
Default: false

##### use_gravatar

Display user avatars by matching their emails with emails at Gravatar.com
Default: true

##### use_uuid_for_certificates

When enabled, Foreman will generate UUIDs for each host instead of using the hostname as the Puppet certname, which is more reliable with changing hostnames.  Note that when disabling this setting, existing stored certnames won't be changed or discarded until new certificates are requested from a host (i.e. on a rebuild), in order that the existing certificate remains known to Foreman and can be revoked.

##### websockets_encrypt

When enabled, virtual machine consoles using NoVNC will always be sent over an encrypted WebSocket connection.  When set to 'auto', it will be enabled if the session is using HTTPS and both websockets_ssl_key and websockets_ssl_cert are set.

##### websockets_ssl_cert

Path to the SSL certificate that will be used for the WebSockets server when serving virtual machine consoles.  Should be the same as the SSL certificate used for the Foreman web server (e.g. Apache).

##### websockets_ssl_key

Path to the SSL private key that will be used for the WebSockets server when serving virtual machine consoles.  Should be the same as the SSL key used for the Foreman web server (e.g. Apache).
